# EZIOT-SDK

./: README.md
V1.5.2/: build.sh
V1.5.2/build_conf/bl602/: .config  ezconfig.h
V1.5.2/build_conf/esp32/: .config
V1.5.2/build_conf/esp8266/: ToolChain.cmake  ezconfig.h  mcuconfig.h
V1.5.2/build_conf/linux/: ToolChain.cmake  ezconfig.h
V1.5.2/build_conf/ln882x/: .config  mcuconfig.h
V1.5.2/build_conf/mt7688/: .config  ToolChain.cmake
V1.5.2/build_conf/rtl8710/: Makefile  ToolChain.cmake
V1.5.2/build_conf/tools/: menuconfig.py
V1.5.2/build_conf/tr6260/: .config  .config.old
V1.5.2/doc/: README.md  esp8266环境搭建.md  hub module.dio  requirements.md  萤石云IoT_SDK接入文档.md
V1.5.2/example/example10_ap/: ap配网常见问题.md  example_ap.c  example_drv_wifi.c
V1.5.2/example/example4_online/: example_online.c
V1.5.2/example/example7_event/: example_event.c
V1.5.2/example/sdk_demo_ota/src/: CMakeLists.txt  ezcloud_ota.h
V1.5.2/example/sdk_demo_ota/src/storage/: kv_imp.h
V1.5.2/src/ez_iot_sdk/inc/: ez_iot_hub.h  ez_iot_tsl.h
V1.5.2/src/ez_iot_sdk/src/: CMakeLists.txt  ez_iot.c  ez_protocol.h
V1.5.2/src/ez_iot_sdk/src/component/ap/: restful_server.h
V1.5.2/src/ez_iot_sdk/src/component/ap/wrappers/dna/: bscJSON.h  dna_httpd.h  prenetwork_entry.c  prenetwork_entry.h  prenetwork_root.c  restful_server.c
V1.5.2/src/ez_iot_sdk/src/component/ap/wrappers/freertos/: ble_msg_parse.c  ble_msg_parse.h
V1.5.2/src/ez_iot_sdk/src/component/ap/wrappers/rtl8710/: drv_wifi.c
V1.5.2/src/ez_iot_sdk/src/component/connect/: connectivity_parse.c  ez_iot_tsl_conn.h
V1.5.2/src/ez_iot_sdk/src/component/http_server/src/: httpd_parse.c  httpd_txrx.c  httpd_uri.c
V1.5.2/src/ez_iot_sdk/src/component/hub/: ez_iot_hub.c  hub_extern.c  hub_func.h
V1.5.2/src/ez_iot_sdk/src/component/logger/: ez_iot_log.c
V1.5.2/src/ez_iot_sdk/src/component/logger/inc/: elog.h
V1.5.2/src/ez_iot_sdk/src/component/logger/wrappers/bl602/: elog_port.c
V1.5.2/src/ez_iot_sdk/src/component/logger/wrappers/freertos/: elog_cfg.h
V1.5.2/src/ez_iot_sdk/src/component/logger/wrappers/mt7688/: elog_file_port.c
V1.5.2/src/ez_iot_sdk/src/component/logger/wrappers/tr6260/: elog_cfg.h
V1.5.2/src/ez_iot_sdk/src/component/ota/: ez_ota.c  ez_ota_bus.h  ez_ota_user.c  ez_ota_user.h
V1.5.2/src/ez_iot_sdk/src/component/shadow/: ez_iot_shadow.h  shadow.c  shadow_def.h  shadow_extern.c
V1.5.2/src/ez_iot_sdk/src/component/time/dna/: ez_iot_correct_time.c
V1.5.2/src/ez_iot_sdk/src/component/time/freertos/: ez_iot_correct_time.c
V1.5.2/src/ez_iot_sdk/src/component/tsl/: ez_iot_tsl_adapter.c  ez_iot_tsl_adapter.h  profile_parse.c  profile_parse.h
V1.5.2/src/ez_iot_sdk/src/ez_hal/bl602/: hal_thread.c
V1.5.2/src/ez_iot_sdk/src/ez_hal/dna/: hal_net_tcp.c  hal_thread.c
V1.5.2/src/ez_iot_sdk/src/ez_hal/dna/dna_inc/: dna_compiler.h  dna_errno.h  dna_libc.h  dna_ota.h  dna_psm.h  dna_sdkconfig.h  dna_sockets.h  dna_uart.h  dna_wlan.h
V1.5.2/src/ez_iot_sdk/src/ez_hal/dna/dna_inc/sntp/: RDA5991H.h
V1.5.2/src/ez_iot_sdk/src/ez_hal/dna/dna_inc/sntp/lwip/: opt.h
V1.5.2/src/ez_iot_sdk/src/ez_hal/dna/dna_inc/sntp/lwip/arch/: lwip_sys_arch.c
V1.5.2/src/ez_iot_sdk/src/ez_hal/freertos/: hal_semaphore.c
V1.5.2/src/ez_iot_sdk/src/ez_hal/linux/: hal_semaphore.c
V1.5.2/src/ez_iot_sdk/src/ez_hal/rtl8710/: hal_thread.c
V1.5.2/src/ez_iot_sdk/src/ez_utils/: lstLib.c
V1.5.2/src/ez_iot_sdk/src/ez_utils/base64/: base64.c
V1.5.2/src/ez_iot_sdk/src/ez_utils/ezkv/: ezkv.c  ezkv.h
V1.5.2/src/ez_iot_sdk/src/ez_utils/ezlist/: ezlist.h
V1.5.2/src/ez_iot_sdk/src/ez_utils/s2j/: s2j.c
V1.5.2/src/ez_iot_sdk/src/ez_utils/timer/: timer.h
V1.5.2/src/ez_iot_sdk/src/ez_utils/uuid/: ieee_node.c  uuid.c
V1.5.2/src/microkernel/paho.mqtt.embedded/: MQTTNet.h
V1.5.2/src/microkernel/pro/centos/: CMakeLists.txt
V1.5.2/src/microkernel/pro/linux-store/: CMakeLists.txt
V1.5.2/src/microkernel/src/: bscJSON.c  (+21 more)
V1.5.2/unit_test/: build.sh
V1.5.2/unit_test/src/: ut_config.h
build_conf/: Readme.md
build_conf/bl602/: .config.old  ToolChain.cmake
build_conf/esp32/: ToolChain.cmake  ezconfig.h  mcuconfig.h
build_conf/esp8266/: .config
build_conf/l610/: .config.old  ToolChain.cmake
build_conf/linux/: .config.old
build_conf/ln882x/: ToolChain.cmake  ezconfig.h
build_conf/rtl8710/: .config  ezconfig.h
build_conf/tools/: Kconfig
build_conf/tr6260/: ToolChain.cmake  ezconfig.h  mcuconfig.h
doc/: FAQ.md  萤石云IoT_SDK芯片适配指导手册.md
example/: README.md
example/example10_ap/: ap配网文档-ap_sta不共存.md  ap配网文档-ap_sta共存.md
example/example1_helloword/: example_helloword.c
example/example2_kv/: example_kv.c
example/example5_bind/: example_bind.c
example/example6_prop/: example_prop.c
example/example8_action/: example_action.c
example/example9_ota/: example_ota.c
example/sdk_demo_ota/src/: ezcloud_access.c  ezcloud_access.h  ezcloud_ota.c  main.c
src/ez_iot_sdk/inc/: ez_iot.h  ez_iot_ap.h  ez_iot_errno.h  ez_iot_log.h  ez_iot_ota.h
src/ez_iot_sdk/src/: ez_iot_ctx.c  ez_iot_ctx.h  ez_iot_def.h  ez_iot_yeild.c  ez_iot_yeild.h  ez_protocol.c
src/microkernel/inc/: base_typedef.h  ezdev_sdk_kernel.h  ezdev_sdk_kernel_error.h  ezdev_sdk_kernel_struct.h
src/microkernel/paho.mqtt.embedded/: MQTTClient.c  MQTTClient.h  MQTTNet.c
src/microkernel/pro/andriod/: CMakeLists.txt  buildall.sh
src/microkernel/src/: CMakeLists.txt  access_domain_bus.c  access_domain_bus.h  das_transport.h  dev_protocol_def.h  ezdev_sdk_kerne_queuel.h  ezdev_sdk_kernel_access.h  ezdev_sdk_kernel_common.c  ezdev_sdk_kernel_common.h  ezdev_sdk_kernel_event.c  ezdev_sdk_kernel_event.h  ezdev_sdk_kernel_ex.c  ezdev_sdk_kernel_ex.h  ezdev_sdk_kernel_extend.c  ezdev_sdk_kernel_inner.c  ezdev_sdk_kernel_inner.h  ezxml.c  mkernel_internal_error.h  sdk_kernel_def.h  utils.c  utils.h
src/microkernel/src/mbedtls/: platform.c  timing.c
unit_test/src/com/: kv_imp.h
unit_test/src/port/linux/: CMakeLists.txt  ToolChain.cmake  fdb_cfg.h  kv_imp.c  ut_entry.c
unit_test/src/ut_ap/: ut_ap.c
unit_test/src/ut_ota/: ut_ota.c
unit_test/src/ut_tsl/: ut_tsl.c
(+154 files in other folders)
